corretto bug sul tipo potenza impegnata